--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/mmicu/colora#readme",
   "dependencies": {
+    "colors": "^1.1.2",
     "highlight.js": "^9.12.0",
+    "htmlparser2": "^3.9.2",
     "parserlib": "^1.1.1"
   },
   "devDependencies": {
