--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "colors": "^1.1.2",
     "highlight.js": "^9.12.0",
     "htmlparser2": "^3.9.2",
+    "parse-color": "^1.0.0",
     "parserlib": "^1.1.1"
   },
   "devDependencies": {
