--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mmicu/colora#readme",
   "dependencies": {
+    "color-namer": "^1.3.0",
     "colors": "^1.1.2",
     "highlight.js": "^9.12.0",
     "htmlparser2": "^3.9.2",
