--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "color-namer": "^1.3.0",
     "colors": "^1.1.2",
+    "commander": "^2.14.1",
     "highlight.js": "^9.12.0",
     "htmlparser2": "^3.9.2",
     "parse-color": "^1.0.0",
